test/negative/ClassExtendsFinalClass/B.java
package B;
final public class B {
    public B() {}
}
